objects/MSP_Partner_Discount__c/MSP_Partner_Discount__c.object-meta.xml
<CustomObject>
    <label>MSP Partner Discount</label>
    <nameField>
        <displayFormat>MPD-{0000}</displayFormat>
        <label>MSP Partner Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSP Partner Discount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>