objects/MSP_Partner_Discount__c/fields/Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Type__c</fullName>
    <description>Compared to the Bundle Type on the Quote Line.  Use in Price Rule to assign MSP Discount.</description>
    <label>Bundle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TaaS</fullName>
            </value>
            <value>
                <fullName>On Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>