objects/MSP_Partner_Discount__c/fields/CaseRecordId__c.field-meta.xml
<CustomField>
    <fullName>CaseRecordId__c</fullName>
    <description>Use in Price Rule to link record to Quote Line.</description>
    <formula>CASESAFEID(Id)</formula>
    <label>CaseRecordId</label>
    <type>Text</type>
</CustomField>