objects/MSP_Partner_Discount__c/fields/MSP_EP_Pricing_Tier_Approved__c.field-meta.xml
<CustomField>
    <fullName>MSP_EP_Pricing_Tier_Approved__c</fullName>
    <description>Tier set on partner account.  Reference in Price Rule to assign discount percentage.</description>
    <label>MSP EP Pricing Tier Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10k</fullName>
            </value>
            <value>
                <fullName>25k</fullName>
            </value>
            <value>
                <fullName>50k</fullName>
            </value>
            <value>
                <fullName>100k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>