objects/MSP_Partner_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MSP_EP_Pricing_Tier_Approved__c</columns>
    <columns>Min_Quantity__c</columns>
    <columns>Max_Quantity__c</columns>
    <columns>Bundle_Type__c</columns>
    <columns>Discount__c</columns>
    <columns>Number_of_Packages__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_of_Packages__c</field>
        <operation>equals</operation>
        <value>9</value>
    </filters>
    <label>All</label>
</ListView>