objects/MSP_Partner_Discount__c/listViews/ESO.listView-meta.xml
<ListView>
    <fullName>ESO</fullName>
    <columns>NAME</columns>
    <columns>MSP_EP_Pricing_Tier_Approved__c</columns>
    <columns>Discount__c</columns>
    <columns>Min_Quantity__c</columns>
    <columns>Max_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bundle_Type__c</field>
        <operation>equals</operation>
    </filters>
    <label>ESO</label>
</ListView>