objects/MSP_Partner_Discount__c/listViews/On_Premise.listView-meta.xml
<ListView>
    <fullName>On_Premise</fullName>
    <columns>NAME</columns>
    <columns>MSP_EP_Pricing_Tier_Approved__c</columns>
    <columns>Number_of_Packages__c</columns>
    <columns>Discount__c</columns>
    <columns>Bundle_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bundle_Type__c</field>
        <operation>equals</operation>
        <value>On Premise</value>
    </filters>
    <label>On Premise</label>
</ListView>